updates to README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-2013 Nov 18
+2014 March 16
 
 This repo contains examples of how to wrap c++ objects in python. It is an
 implementation of a Cartesian coordinate system built around three double 
@@ -6,10 +6,12 @@ precision floating point numbers. The space objects support vector arithmetic
 by overloading the +, -, * and / operators, where * is the dot product and /
 scales. There is a separate function for cross product.
 
-With a c++ simulation model wrapped in python, the position and
-velocity of a given body can easily be converted to a new coordinate
-system (e.g. centered on the moon) or have calculated quantities like
-the angular momentum over time plotted.
+It is a submodule of my Orbits simulation program. With the c++
+simulation model wrapped in python, the position and velocity of a
+given body can easily be converted to a new coordinate system
+(e.g. centered on the moon) or have calculated quantities like the
+angular momentum over time plotted. A demo is available on my web-site
+starbug.com.
 
 -lrm
 
