--- a/python/SpaceManual/README
+++ b/python/SpaceManual/README
@@ -6,6 +6,8 @@ They can be built by python with the command:
 python setup.py build
 
 setup.py assumes libSpace.dylib is built and located in ../../libSpace.
+This can ge changed by setting the CARTESIAN_LIBRARY_PATH environment
+variable. See setenv.sh for details.
 
 Once built you will need to add the module to your python path to use.
 setenv.sh show some examples of how I set this on my iMac during
