--- a/libSpace/README
+++ b/libSpace/README
@@ -1,11 +1,12 @@
-2013nov16
+2014 June 30
 
-This is my C++ implementation of a Cartesian space object built around
-three doubles for x, y and z for use with computer models of space
-craft in transfer orbits.
+This is my C++ implementation of a Cartesian space object for use in
+physics applications as a full featured C++ object. It is built around
+three doubles for x, y and z. The math operators are overloaded to
+support vector arithmetic.
 
-This uses Google's gtest, http://code.google.com/p/googletest/, for
-unit testing. The makefile uses GTEST_DIR to locate where it is
-installed. You do not need gtest to build the library.
+This uses Google's gtest unit testing. The makefile uses GTEST_DIR to
+locate where it is installed. You do not need gtest to build the
+library.
 
 -lrm
